--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
   <h2>Schedule and Syllabus</h2>
 
   <p>
-  Unless otherwise specified the lectures are Tuesday and Thursday 12pm to 1:20pm in the NVIDIA Auditorium
-  in the Huang Engineering Center.
+  something
   (<a href="https://campus-map.stanford.edu/?id=04-080&amp;lat=37.42787956&amp;lng=-122.17429865&amp;zoom=17&amp;srch=nvidia%20auditorium">map</a>)
 
   </p><p>
-  Discussion sections will be Fridays 12:30pm to 1:20pm in Skilling Auditorium.
+  something
   (<a href="https://campus-map.stanford.edu/?id=04-550&amp;lat=37.42713104&amp;lng=-122.17284632&amp;zoom=17&amp;srch=skilling%20auditorium">map</a>)
 
 <br><br>
@@ -76,10 +75,8 @@ are still available.
     <td>Lecture 1</td>
     <td>Tuesday <br> April 3</td>
     <td>
-      <b>Course Introduction</b> <br>
-      Computer vision overview <br>
-      Historical context <br>
-      Course logistics
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture01.pdf">[slides]</a>
@@ -89,10 +86,8 @@ are still available.
     <td>Lecture 2</td>
     <td>Thursday <br> April 5</td>
     <td>
-      <b>Image Classification</b> <br>
-      The data-driven approach <br>
-      K-nearest neighbor <br>
-      Linear classification I
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture02.pdf">[slides]</a>
@@ -116,10 +111,8 @@ are still available.
     <td>Lecture 3</td>
     <td>Tuesday <br> April 10</td>
     <td>
-      <b>Loss Functions and Optimization</b> <br>
-      Linear classification II<br>
-      Higher-level representations, image features<br>
-      Optimization, stochastic gradient descent</td>
+      <b>Course</b> <br>
+      something
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture03.pdf">[slides]</a>
       <br>
@@ -131,10 +124,8 @@ are still available.
     <td>Lecture 4</td>
     <td>Thursday <br> April 12</td>
     <td>
-      <b>Introduction to Neural Networks</b> <br>
-      Backpropagation<br>
-      Multi-layer Perceptrons<br>
-      The neural viewpoint
+      <b>Course</b> <br>
+      something
     </td><td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture04.pdf">[slides]</a>  
       <br>
@@ -159,10 +150,8 @@ are still available.
     <td>Lecture 5</td>
     <td>Tuesday <br> April 17</td>
     <td>
-      <b>Convolutional Neural Networks</b> <br>
-      History <br>
-      Convolution and pooling <br>
-      ConvNets outside vision
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture05.pdf">[slides]</a>
@@ -185,8 +174,8 @@ are still available.
     <td>Lecture 6</td>
     <td>Thursday <br> April 19</td>
     <td>
-      <b>Training Neural Networks, part I</b> <br>
-      Activation functions, initialization, dropout, batch normalization
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture06.pdf">[slides]</a>
@@ -218,8 +207,8 @@ are still available.
     <td>Lecture 7</td>
     <td>Tuesday <br> April 24</td>
     <td>
-      <b>Training Neural Networks, part II</b> <br>
-      Update rules, ensembles, data augmentation, transfer learning
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture07.pdf">[slides]</a>
@@ -237,10 +226,8 @@ are still available.
     <td>Lecture 8</td>
     <td>Thursday <br> April 26</td>
     <td>
-      <b>Deep Learning Hardware and Software</b> <br>
-      CPUs, GPUs, TPUs <br>
-      PyTorch, TensorFlow <br>
-      Dynamic vs Static computational graphs
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture08.pdf">[slides]</a>
@@ -261,8 +248,8 @@ are still available.
     <td>Lecture 9</td>
     <td>Tuesday <br> May 1</td>
     <td>
-      <b>CNN Architectures</b> <br>
-      AlexNet, VGG, GoogLeNet, ResNet, etc
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture09.pdf">[slides]</a>
@@ -285,11 +272,8 @@ are still available.
     <td>Lecture 10</td>
     <td>Thursday <br> May 4</td>
     <td>
-      <b>Recurrent Neural Networks</b> <br>
-      RNN, LSTM, GRU <br>
-      Language modeling <br>
-      Image captioning, visual question answering <br>
-      Soft attention
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture10.pdf">[slides]</a>
@@ -319,10 +303,8 @@ are still available.
     <td>Lecture 11</td>
     <td>Thursday <br> May 10</td>
     <td>
-      <b>Detection and Segmentation</b> <br>
-      Semantic segmentation <br>
-      Object detection <br>
-      Instance segmentation
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture11.pdf">[slides]</a>
@@ -343,10 +325,8 @@ are still available.
     <td>Lecture 12</td>
     <td>Tuesday <br> May 15</td>
     <td>
-      <b>Generative Models</b> <br>
-      PixelRNN/CNN <br>
-      Variational Autoencoders <br>
-      Generative Adversarial Networks
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture12.pdf">[slides]</a>
@@ -363,10 +343,8 @@ are still available.
     <td>Lecture 13</td>
     <td>Thursday <br> May 17</td>
     <td>
-      <b>Visualizing and Understanding</b> <br>
-      Feature visualization and inversion <br>
-      Adversarial examples <br>
-      DeepDream and style transfer
+      <b>Course</b> <br>
+      something
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture13.pdf">[slides]</a>
@@ -380,9 +358,8 @@ are still available.
     <td>Lecture 14</td>
     <td>Tuesday <br> May 22</td>
     <td>
-      <b>Deep Reinforcement Learning</b> <br>
-      Policy gradients, hard attention <br>
-      Q-Learning, Actor-Critic
+      <b>Course</b> <br>
+      something
    </td>
    <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture14.pdf">[slides]</a>
@@ -403,7 +380,8 @@ are still available.
     <td>Lecture 15 <br> Guest Lecture</td>
     <td>Thursday <br> May 24</td>
     <td>
-      <b>Invited Talk: <a href="https://cs.stanford.edu/people/karpathy/">Andrej Karpathy</a></b>
+      <b>Course</b> <br>
+      something
     </td><td>
       [slides]
       <br>
