--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Syllabus | yidu</title>
+  <title>Syllabus | Reinforcement Learning Reading Seminar</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="./Syllabus _ CS 231N_files/bootstrap.min.css">
@@ -37,7 +37,7 @@
   </a>
 
   <a href="http://cs231n.stanford.edu/index.html">
-    <h1>yidu</h1>
+    <h1>Reinforcement Learning Reading Seminar</h1>
   </a>
 
   <div style="clear:both;"></div>
@@ -50,18 +50,15 @@
   <h2>Schedule and Syllabus</h2>
 
   <p>
-  something
+时间：从下周六（8月25号）开始，每周六晚上 7:00-9:00 pm. 
   (<a href="https://campus-map.stanford.edu/?id=04-080&amp;lat=37.42787956&amp;lng=-122.17429865&amp;zoom=17&amp;srch=nvidia%20auditorium">map</a>)
 
   </p><p>
-  something
+Venue：NUS S17 05-12
   (<a href="https://campus-map.stanford.edu/?id=04-550&amp;lat=37.42713104&amp;lng=-122.17284632&amp;zoom=17&amp;srch=skilling%20auditorium">map</a>)
 
 <br><br>
-This is the syllabus for the <b>Spring 2018</b> iteration of the course.
-The syllabus for the <a href="http://cs231n.stanford.edu/2017/syllabus">Spring 2017</a>, <a href="http://cs231n.stanford.edu/2016/syllabus">Winter 2016</a>
-and <a href="http://cs231n.stanford.edu/2015/syllabus">Winter 2015</a> iterations of this course
-are still available.
+This is the syllabus for the <b>September 2018</b> iteration of the course.
 
 </p></div>
 </div>
@@ -76,7 +73,7 @@ are still available.
     <td>Tuesday <br> April 3</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 2: Multi-armed Bandits:  Paul
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture01.pdf">[slides]</a>
@@ -87,17 +84,13 @@ are still available.
     <td>Thursday <br> April 5</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 3: Finite Markov Decision Processes: ming rui
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture02.pdf">[slides]</a>
-      <br>
-      <a href="http://cs231n.github.io/python-numpy-tutorial">[python/numpy tutorial]</a><br>
-      <a href="http://cs231n.github.io/classification">[image classification notes]</a><br>
-      <a href="http://cs231n.github.io/linear-classify">[linear classification notes]</a><br>
     </td>
   </tr>
-  <tr class="info">
+  <!--tr class="info">
     <td>Discussion Section</td>
     <td>Friday <br> April 6</td>
     <td>
@@ -106,13 +99,13 @@ are still available.
     <td>
       <a href="http://cs231n.stanford.edu/notebooks/python_numpy_tutorial.ipynb">[python/numpy notebook]</a>
     </td>
-  </tr>
+  </tr-->
   <tr>
     <td>Lecture 3</td>
     <td>Tuesday <br> April 10</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 4: Dynamic Programming:  XI GUOJIANG
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture03.pdf">[slides]</a>
       <br>
@@ -125,18 +118,12 @@ are still available.
     <td>Thursday <br> April 12</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 5: Monte Carlo Methods:  Zhaoqiang Liu
     </td><td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture04.pdf">[slides]</a>  
-      <br>
-      <a href="http://cs231n.github.io/optimization-2">[backprop notes]</a><br>
-      <a href="http://cs231n.stanford.edu/handouts/linear-backprop.pdf">[linear backprop example]</a><br>
-      <a href="http://cs231n.stanford.edu/handouts/derivatives.pdf">[derivatives notes]</a> (optional) <br>
-      <a href="http://yann.lecun.com/exdb/publis/pdf/lecun-98b.pdf">[Efficient BackProp]</a> (optional)<br>
-      related: <a href="http://colah.github.io/posts/2015-08-Backprop/">[1]</a>, <a href="http://neuralnetworksanddeeplearning.com/chap2.html">[2]</a>, <a href="https://www.youtube.com/watch?v=q0pm3BrIUFo">[3]</a> (optional)
     </td>
   </tr>
-  <tr class="info">
+  <!--tr class="info">
     <td>Discussion Section</td>
     <td>Friday <br> April 13</td>
     <td>
@@ -145,13 +132,13 @@ are still available.
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_ds02.pdf">[slides]</a>
     </td>
-  </tr>
+  </tr-->
   <tr>
     <td>Lecture 5</td>
     <td>Tuesday <br> April 17</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 6: Temporal-Difference Learning: Xiang Wang
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture05.pdf">[slides]</a>
@@ -159,7 +146,7 @@ are still available.
       <a href="http://cs231n.github.io/convolutional-networks/">ConvNet notes</a><br>
     </td>
   </tr>
-  <tr class="warning">
+  <!--tr class="warning">
     <td>A1 Due</td>
     <td>Wednesday <br> April 18</td>
     <td>
@@ -169,30 +156,20 @@ are still available.
     <td>
       <a href="http://cs231n.github.io/assignments2018/assignment1/">[Assignment #1]</a>
     </td>
-  </tr>
+  </tr-->
   <tr>
     <td>Lecture 6</td>
     <td>Thursday <br> April 19</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 7: n-step Bootstrapping:li yang
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture06.pdf">[slides]</a>
-      <br>
-      <a href="http://cs231n.github.io/neural-networks-1/">Neural Nets notes 1</a><br>
-      <a href="http://cs231n.github.io/neural-networks-2/">Neural Nets notes 2</a><br>
-      <a href="http://cs231n.github.io/neural-networks-3/">Neural Nets notes 3</a><br>
-      tips/tricks: 
-      <a href="http://research.microsoft.com/pubs/192769/tricks-2012.pdf">[1]</a>, 
-      <a href="http://yann.lecun.com/exdb/publis/pdf/lecun-98b.pdf">[2]</a>, 
-      <a href="http://arxiv.org/pdf/1206.5533v2.pdf">[3]</a> (optional)
-      <br>
-      <a href="http://www.nature.com/nature/journal/v521/n7553/full/nature14539.html">Deep Learning [Nature]</a> (optional)
     </td>
   </tr>
   
-  <tr class="info">
+  <!--tr class="info">
     <td>Discussion Section</td>
     <td>Friday <br> April 20</td>
     <td>
@@ -201,39 +178,37 @@ are still available.
     <td>
       <a href="https://docs.google.com/presentation/d/183aCHcSq-YsaokZrqI3khuy_zPbehG-XgkyA6L5W4t4/edit?usp=sharing">[slides]</a>
     </td>
-  </tr>
+  </tr-->
   
   <tr>
     <td>Lecture 7</td>
     <td>Tuesday <br> April 24</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 8: Planning and Learning with Tabular Methods: Chen Yu
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture07.pdf">[slides]</a>
-      <br>
-      <a href="http://cs231n.github.io/neural-networks-3/">Neural Nets notes 3</a><br>
     </td>
   </tr>
-  <tr class="warning">
+  <!--tr class="warning">
     <td>Proposal due</td>
     <td>Wednesday <br> April 25</td>
     <td>Project Proposal due</td>
     <td><a href="http://cs231n.stanford.edu/project.html">[proposal description]</a></td>
-  </tr>
+  </tr-->
   <tr>
     <td>Lecture 8</td>
     <td>Thursday <br> April 26</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 9: On-policy Prediction with Approximation: Sun ZhiHao
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture08.pdf">[slides]</a>
     </td>
   </tr>
-  <tr class="info">
+  <!--tr class="info">
     <td>Discussion Section</td>
     <td>Friday <br> April 27</td>
     <td>
@@ -242,14 +217,14 @@ are still available.
     <td>
       <a href="http://cs231n.stanford.edu/notebooks/pytorch_tutorial.ipynb">[pytorch notebook]</a>
     </td>
-  </tr>
+  </tr-->
   <tr>
   </tr><tr>
     <td>Lecture 9</td>
     <td>Tuesday <br> May 1</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 10: On-policy Control with Approximation: Liu Zuozhu
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture09.pdf">[slides]</a>
@@ -257,7 +232,7 @@ are still available.
       <a href="https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf">AlexNet</a>, <a href="https://arxiv.org/abs/1409.1556">VGGNet</a>, <a href="https://arxiv.org/abs/1409.4842">GoogLeNet</a>, <a href="https://arxiv.org/abs/1512.03385">ResNet</a>
     </td>
   </tr>
-  <tr class="warning">
+  <!--tr class="warning">
     <td>A2 Due</td>
     <td>Wednesday <br> May 2</td>
     <td>
@@ -268,22 +243,18 @@ are still available.
       <a href="http://cs231n.github.io/assignments2018/assignment2/">[Assignment #2]</a>
     </td>
   </tr>
-  <tr>  
+  <tr-->  
     <td>Lecture 10</td>
     <td>Thursday <br> May 4</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 11: Off-policy Methods with approximation: Zhang Wei
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture10.pdf">[slides]</a>
-      <br>
-      <a href="http://www.deeplearningbook.org/contents/rnn.html">DL book RNN chapter</a> (optional)<br>
-      <a href="https://gist.github.com/karpathy/d4dee566867f8291f086">min-char-rnn</a>, <a href="https://github.com/karpathy/char-rnn">char-rnn</a>, <a href="https://github.com/karpathy/neuraltalk2">neuraltalk2</a>
-
     </td>
   </tr>
-  <tr class="info">
+  <!--tr class="info">
     <td>Discussion Section</td>
     <td>Friday <br> May 4</td>
     <td>
@@ -292,19 +263,19 @@ are still available.
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_midterm_review.pdf">[slides]</a>
     </td>
-  </tr>
-  <tr class="danger">
+  </tr-->
+  <!--tr class="danger">
     <td>Midterm</td>
     <td>Tuesday <br> May 8</td>
     <td><b>In-class midterm</b><br>Location: Various (see <a href="https://piazza.com/class/jdmurnqexkt47x?cid=1245" target="_blank">Piazza</a> for more details). <br></td>
     <td><a href="https://piazza.com/class/jdmurnqexkt47x?cid=43">SCPD Midterm Info</a></td>
-  </tr>
+  </tr-->
   <tr>
     <td>Lecture 11</td>
     <td>Thursday <br> May 10</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 12: Eligibility Traces: Zihao Song
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture11.pdf">[slides]</a>
@@ -326,7 +297,7 @@ are still available.
     <td>Tuesday <br> May 15</td>
     <td>
       <b>Course</b> <br>
-      something
+      Chapter 13: Policy Gradient Methods: Li Shaohua
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture12.pdf">[slides]</a>
@@ -339,7 +310,7 @@ are still available.
     <td>Project Milestone due</td>
     <td></td>
   </tr>
-  <tr>
+  <!--tr>
     <td>Lecture 13</td>
     <td>Thursday <br> May 17</td>
     <td>
@@ -438,7 +409,7 @@ are still available.
     <td>Tuesday<br> June 12</td>
     <td><a href="https://engineering.stanford.edu/location">Jen-Hsun Huang Engineering Center</a><br>12:00 pm to 3:15 pm</td>
     <td></td>
-  </tr>
+  </tr-->
 </tbody></table>
 </div>
 
