--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
 <div id="header">
   <a href="http://svl.stanford.edu/">
-    <img src="./Syllabus _ CS 231N_files/SVLLogo.svg" style="height:50px; float: left; margin-left: 20px;">
+    <img src="./paul.jpg" style="height:50px; float: left; margin-left: 20px;">
   </a>
   <a href="http://stanford.edu/">
-    <img src="./Syllabus _ CS 231N_files/stanfordlogo.jpg" style="height:50px; float: right; margin-right: 20px;">
+    <img src="./paul.jpg" style="height:50px; float: right; margin-right: 20px;">
   </a>
 
   <a href="http://cs231n.stanford.edu/index.html">
@@ -51,11 +51,11 @@
 
   <p>
 时间：从下周六（8月25号）开始，每周六晚上 7:00-9:00 pm. 
-  (<a href="https://campus-map.stanford.edu/?id=04-080&amp;lat=37.42787956&amp;lng=-122.17429865&amp;zoom=17&amp;srch=nvidia%20auditorium">map</a>)
+  (<a href="http://map.nus.edu.sg/">map</a>)
 
   </p><p>
 Venue：NUS S17 05-12
-  (<a href="https://campus-map.stanford.edu/?id=04-550&amp;lat=37.42713104&amp;lng=-122.17284632&amp;zoom=17&amp;srch=skilling%20auditorium">map</a>)
+  (<a href="http://map.nus.edu.sg/">map</a>)
 
 <br><br>
 This is the syllabus for the <b>September 2018</b> iteration of the course.
@@ -70,7 +70,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr>
   <tr>
     <td>Lecture 1</td>
-    <td>Tuesday <br> April 3</td>
+    <td>Saturday <br> Auguest 25th</td>
     <td>
       <b>Course</b> <br>
       Chapter 2: Multi-armed Bandits:  Paul
@@ -81,7 +81,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr>
   <tr>
     <td>Lecture 2</td>
-    <td>Thursday <br> April 5</td>
+    <td>Saturday <br> September 1st</td>
     <td>
       <b>Course</b> <br>
       Chapter 3: Finite Markov Decision Processes: ming rui
@@ -102,20 +102,17 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr-->
   <tr>
     <td>Lecture 3</td>
-    <td>Tuesday <br> April 10</td>
+    <td>Saturday <br> Sept</td>
     <td>
       <b>Course</b> <br>
       Chapter 4: Dynamic Programming:  XI GUOJIANG
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture03.pdf">[slides]</a>
-      <br>
-      <a href="http://cs231n.github.io/linear-classify">[linear classification notes]</a><br>
-      <a href="http://cs231n.github.io/optimization-1">[optimization notes]</a>
     </td>
   </tr>
   <tr>
     <td>Lecture 4</td>
-    <td>Thursday <br> April 12</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Course</b> <br>
       Chapter 5: Monte Carlo Methods:  Zhaoqiang Liu
@@ -135,20 +132,18 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr-->
   <tr>
     <td>Lecture 5</td>
-    <td>Tuesday <br> April 17</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Course</b> <br>
       Chapter 6: Temporal-Difference Learning: Xiang Wang
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture05.pdf">[slides]</a>
-      <br>
-      <a href="http://cs231n.github.io/convolutional-networks/">ConvNet notes</a><br>
     </td>
   </tr>
   <!--tr class="warning">
     <td>A1 Due</td>
-    <td>Wednesday <br> April 18</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Assignment #1 due</b> <br>
       kNN, SVM, SoftMax, two-layer network
@@ -159,7 +154,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr-->
   <tr>
     <td>Lecture 6</td>
-    <td>Thursday <br> April 19</td>
+    <td>Saturday <br></td>
     <td>
       <b>Course</b> <br>
       Chapter 7: n-step Bootstrapping:li yang
@@ -182,7 +177,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   
   <tr>
     <td>Lecture 7</td>
-    <td>Tuesday <br> April 24</td>
+    <td>Saturday <br></td>
     <td>
       <b>Course</b> <br>
       Chapter 8: Planning and Learning with Tabular Methods: Chen Yu
@@ -199,7 +194,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr-->
   <tr>
     <td>Lecture 8</td>
-    <td>Thursday <br> April 26</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Course</b> <br>
       Chapter 9: On-policy Prediction with Approximation: Sun ZhiHao
@@ -221,15 +216,13 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   <tr>
   </tr><tr>
     <td>Lecture 9</td>
-    <td>Tuesday <br> May 1</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Course</b> <br>
       Chapter 10: On-policy Control with Approximation: Liu Zuozhu
     </td>
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture09.pdf">[slides]</a>
-      <br>
-      <a href="https://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf">AlexNet</a>, <a href="https://arxiv.org/abs/1409.1556">VGGNet</a>, <a href="https://arxiv.org/abs/1409.4842">GoogLeNet</a>, <a href="https://arxiv.org/abs/1512.03385">ResNet</a>
     </td>
   </tr>
   <!--tr class="warning">
@@ -245,7 +238,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr>
   <tr-->  
     <td>Lecture 10</td>
-    <td>Thursday <br> May 4</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Course</b> <br>
       Chapter 11: Off-policy Methods with approximation: Zhang Wei
@@ -272,7 +265,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr-->
   <tr>
     <td>Lecture 11</td>
-    <td>Thursday <br> May 10</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Course</b> <br>
       Chapter 12: Eligibility Traces: Zihao Song
@@ -282,7 +275,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
       <br>
     </td>
   </tr>
-  <tr class="info">
+  <!--tr class="info">
     <td>Discussion Section</td>
     <td>Friday <br> May 11</td>
     <td>
@@ -291,10 +284,10 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
     <td>
       <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_ds06.pdf">[slides]</a>
     </td>
-  </tr>
+  </tr-->
   <tr>
     <td>Lecture 12</td>
-    <td>Tuesday <br> May 15</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Course</b> <br>
       Chapter 13: Policy Gradient Methods: Li Shaohua
@@ -306,13 +299,13 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr>
   <tr class="warning">
     <td>Milestone</td>
-    <td>Wednesday <br> May 16</td>
-    <td>Project Milestone due</td>
+    <td>Saturday <br> </td>
+    <td>Finish</td>
     <td></td>
   </tr>
   <!--tr>
     <td>Lecture 13</td>
-    <td>Thursday <br> May 17</td>
+    <td>Saturday <br> May 17</td>
     <td>
       <b>Course</b> <br>
       something
@@ -327,7 +320,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr>
   <tr>
     <td>Lecture 14</td>
-    <td>Tuesday <br> May 22</td>
+    <td>Saturday <br> </td>
     <td>
       <b>Course</b> <br>
       something
@@ -349,7 +342,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr>
   <tr class="info">
     <td>Lecture 15 <br> Guest Lecture</td>
-    <td>Thursday <br> May 24</td>
+    <td>Saturday <br> May 24</td>
     <td>
       <b>Course</b> <br>
       something
@@ -382,7 +375,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr>
   <tr>
     <td>Lecture 17</td>
-    <td>Thursday <br> May 31</td>
+    <td>Saturday <br> May 31</td>
     <td>Student spotlight talks, conclusions</td>
     <td>
       [slides]
@@ -400,7 +393,7 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
   </tr>
   <tr class="warning">
     <td>Final Project Due</td>
-    <td>Thursday<br>June 7</td>
+    <td>Saturday<br>June 7</td>
     <td>Project Report due</td>
     <td></td>
   </tr>
