--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Syllabus | Reinforcement Learning Reading Seminar</title>
+  <title>DAC events</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="./Syllabus _ CS 231N_files/bootstrap.min.css">
@@ -29,15 +29,15 @@
 <body>
 
 <div id="header">
-  <a href="http://svl.stanford.edu/">
-    <img src="./paul.jpg" style="height:50px; float: left; margin-left: 20px;">
+  <a>
+    <img src="./dac.jpg" style="height:50px; float: left; margin-left: 20px;">
   </a>
-  <a href="http://stanford.edu/">
-    <img src="./paul.jpg" style="height:50px; float: right; margin-right: 20px;">
+  <a>
+    <img src="./dac.jpg" style="height:50px; float: right; margin-right: 20px;">
   </a>
 
-  <a href="http://cs231n.stanford.edu/index.html">
-    <h1>Reinforcement Learning Reading Seminar</h1>
+  <a>
+    <h1>DAC semestrial events</h1>
   </a>
 
   <div style="clear:both;"></div>
@@ -47,18 +47,11 @@
 <div class="sechighlight">
 <div class="container sec">
 
-  <h2>Schedule and Syllabus</h2>
+  <h2>DAC upcoming events</h2>
 
-  <p>
-时间：从下周六（8月25号）开始，每周六晚上 7:00-9:00 pm. 
-  (<a href="http://map.nus.edu.sg/">map</a>)
-
-  </p><p>
-Venue：NUS S17 05-12
-  (<a href="http://map.nus.edu.sg/">map</a>)
-
-<br><br>
-This is the syllabus for the <b>September 2018</b> iteration of the course.
+  <p>MM4 </p><p>
+  Date and Time:  <b> 20th Jan 2019,19:00-22:00</b> <br><br>
+  Venue:<b>Blk A.3.05.C</b>
 
 </p></div>
 </div>
@@ -66,355 +59,21 @@ This is the syllabus for the <b>September 2018</b> iteration of the course.
 <div class="container sec">
 <table class="table">
   <tbody><tr class="active">
-    <th>Event Type</th><th>Date</th><th>Description</th><th>Course Materials</th><th>Speaker</th>
+    <th>Month</th><th>Schedule</th>
   </tr>
   <tr>
-    <td>Lecture 1</td>
-    <td>Saturday <br> Auguest 25th</td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 2: Multi-armed Bandits:  Paul
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture01.pdf">[slides]</a>
-    </td>
-    <td>Paul</td>
+    <td>Oct 2018</td>
+    <td><img src="./dac010.jpg" style="height:720px; float: left; margin-left: 20px;"></td>
   </tr>
   <tr>
-    <td>Lecture 2</td>
-    <td>Saturday <br> September 1st</td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 3: Finite Markov Decision Processes: ming rui
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture02.pdf">[slides]</a>
-    </td>
-    <td>Ming Rui</td>
-  </tr>
-  <!--tr class="info">
-    <td>Discussion Section</td>
-    <td>Friday <br> April 6</td>
-    <td>
-      <b>Python / numpy / Google Cloud</b>
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/notebooks/python_numpy_tutorial.ipynb">[python/numpy notebook]</a>
-    </td>
-    <td>someone</td>
-  </tr-->
-  <tr>
-    <td>Lecture 3</td>
-    <td>Saturday <br> Sept</td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 4: Dynamic Programming:  XI GUOJIANG
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture03.pdf">[slides]</a>
-    </td>
-    <td>Xi Guojiang</td>
+    <td>Nov 2018</td>
+    <td><img src="./dac011.jpg" style="height:720px; float: left; margin-left: 20px;"></td>
   </tr>
   <tr>
-    <td>Lecture 4</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 5: Monte Carlo Methods:  Zhaoqiang Liu
-    </td><td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture04.pdf">[slides]</a>  
-    </td>
-    <td>Zhaoqiang Liu</td>
+    <td>Dec 2018</td>
+    <td><img src="./dac012.jpg" style="height:720px; float: left; margin-left: 20px;"></td>
   </tr>
-  <!--tr class="info">
-    <td>Discussion Section</td>
-    <td>Friday <br> April 13</td>
-    <td>
-      <b>Backpropagation</b>
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_ds02.pdf">[slides]</a>
-    </td>
-  </tr-->
-  <tr>
-    <td>Lecture 5</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 6: Temporal-Difference Learning: Xiang Wang
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture05.pdf">[slides]</a>
-    </td>
-   <td>Xiang Wang</td>
-  </tr>
-  <!--tr class="warning">
-    <td>A1 Due</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Assignment #1 due</b> <br>
-      kNN, SVM, SoftMax, two-layer network
-    </td>
-    <td>
-      <a href="http://cs231n.github.io/assignments2018/assignment1/">[Assignment #1]</a>
-    </td>
-  </tr-->
-  <tr>
-    <td>Lecture 6</td>
-    <td>Saturday <br></td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 7: n-step Bootstrapping:li yang
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture06.pdf">[slides]</a>
-    </td>
-    <td>Li Yang</td>
-  </tr>
-  
-  <!--tr class="info">
-    <td>Discussion Section</td>
-    <td>Friday <br> April 20</td>
-    <td>
-      <b>Tips and tricks for tuning NNs</b>
-    </td>
-    <td>
-      <a href="https://docs.google.com/presentation/d/183aCHcSq-YsaokZrqI3khuy_zPbehG-XgkyA6L5W4t4/edit?usp=sharing">[slides]</a>
-    </td>
-  </tr-->
-  
-  <tr>
-    <td>Lecture 7</td>
-    <td>Saturday <br></td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 8: Planning and Learning with Tabular Methods: Chen Yu
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture07.pdf">[slides]</a>
-    </td>
-    <td>Chen Yu</td>
-  </tr>
-  <!--tr class="warning">
-    <td>Proposal due</td>
-    <td>Wednesday <br> April 25</td>
-    <td>Project Proposal due</td>
-    <td><a href="http://cs231n.stanford.edu/project.html">[proposal description]</a></td>
-  </tr-->
-  <tr>
-    <td>Lecture 8</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 9: On-policy Prediction with Approximation: Sun ZhiHao
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture08.pdf">[slides]</a>
-    </td>
-    <td>Sun Zhihao</td>
-  </tr>
-  <!--tr class="info">
-    <td>Discussion Section</td>
-    <td>Friday <br> April 27</td>
-    <td>
-      <b>PyTorch / Tensorflow</b>
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/notebooks/pytorch_tutorial.ipynb">[pytorch notebook]</a>
-    </td>
-  </tr-->
-  <tr>
-  </tr><tr>
-    <td>Lecture 9</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 10: On-policy Control with Approximation: Liu Zuozhu
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture09.pdf">[slides]</a>
-    </td>
-    <td>Liu Zuozhu</td>
-  </tr>
-  <!--tr class="warning">
-    <td>A2 Due</td>
-    <td>Wednesday <br> May 2</td>
-    <td>
-      <b>Assignment #2 due</b> <br>
-      Neural networks, ConvNets
-    </td>
-    <td>
-      <a href="http://cs231n.github.io/assignments2018/assignment2/">[Assignment #2]</a>
-    </td>
-  </tr>
-  <tr-->  
-    <td>Lecture 10</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 11: Off-policy Methods with approximation: Zhang Wei
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture10.pdf">[slides]</a>
-    </td>
-    <td>Zhang Wei</td>
-  </tr>
-  <!--tr class="info">
-    <td>Discussion Section</td>
-    <td>Friday <br> May 4</td>
-    <td>
-      <b>Midterm Review</b>
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_midterm_review.pdf">[slides]</a>
-    </td>
-  </tr-->
-  <!--tr class="danger">
-    <td>Midterm</td>
-    <td>Tuesday <br> May 8</td>
-    <td><b>In-class midterm</b><br>Location: Various (see <a href="https://piazza.com/class/jdmurnqexkt47x?cid=1245" target="_blank">Piazza</a> for more details). <br></td>
-    <td><a href="https://piazza.com/class/jdmurnqexkt47x?cid=43">SCPD Midterm Info</a></td>
-  </tr-->
-  <tr>
-    <td>Lecture 11</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 12: Eligibility Traces: Zihao Song
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture11.pdf">[slides]</a>
-      <br>
-    </td>
-    <td>Zihao Song</td>
-  </tr>
-  <!--tr class="info">
-    <td>Discussion Section</td>
-    <td>Friday <br> May 11</td>
-    <td>
-      <b>Practical Object Detection and Segmentation</b>
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_ds06.pdf">[slides]</a>
-    </td>
-  </tr-->
-  <tr>
-    <td>Lecture 12</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Course</b> <br>
-      Chapter 13: Policy Gradient Methods: Li Shaohua
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture12.pdf">[slides]</a>
-    </td>
-    <td>Li Shaohua</td>
-  </tr>
-  <tr class="warning">
-    <td>Milestone</td>
-    <td>Saturday <br> </td>
-    <td>Finish</td>
-    <td></td>
-  </tr>
-  <!--tr>
-    <td>Lecture 13</td>
-    <td>Saturday <br> May 17</td>
-    <td>
-      <b>Course</b> <br>
-      something
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture13.pdf">[slides]</a>
-      <br>
-      <a href="https://github.com/google/deepdream">DeepDream</a><br>
-      <a href="https://github.com/jcjohnson/neural-style">neural-style</a><br>
-      <a href="https://github.com/jcjohnson/fast-neural-style">fast-neural-style</a><br>
-    </td>
-  </tr>
-  <tr>
-    <td>Lecture 14</td>
-    <td>Saturday <br> </td>
-    <td>
-      <b>Course</b> <br>
-      something
-   </td>
-   <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_lecture14.pdf">[slides]</a>
-     <br>
-    </td>
-  </tr>
-  <tr class="warning">
-    <td>A3 Due</td>
-    <td>Wednesday <br> May 23</td>
-    <td>
-      <b>Assignment #3 due</b>
-    </td>
-    <td>
-      <a href="http://cs231n.github.io/assignments2018/assignment3/">[Assignment #3]</a>
-    </td>  
-  </tr>
-  <tr class="info">
-    <td>Lecture 15 <br> Guest Lecture</td>
-    <td>Saturday <br> May 24</td>
-    <td>
-      <b>Course</b> <br>
-      something
-    </td><td>
-      [slides]
-      <br>
-    </td>
-  </tr>
-  <tr class="info">
-    <td>Discussion Section</td>
-    <td>Friday <br> May 25 </td>
-    <td>
-      <b>Weak Supervision</b>
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_ds07.pdf">[slides]</a>
-    </td>
-  </tr>
-  <tr class="info">
-    <td>Lecture 16 <br> Guest Lecture</td>
-    <td>Tuesday <br> May 29</td>
-    <td>
-      <b>Invited Talk: <a href="https://people.eecs.berkeley.edu/~malik/">Jitendra Malik</a></b>
-      <br>
-    </td>
-    <td>
-      [slides]
-      <br>
-    </td>
-  </tr>
-  <tr>
-    <td>Lecture 17</td>
-    <td>Saturday <br> May 31</td>
-    <td>Student spotlight talks, conclusions</td>
-    <td>
-      [slides]
-    </td>
-  </tr>
-  <tr class="info">
-    <td>Discussion Section</td>
-    <td>Friday <br> June 1 </td>
-    <td>
-      <b>Video Understanding</b>
-    </td>
-    <td>
-      <a href="http://cs231n.stanford.edu/slides/2018/cs231n_2018_ds08.pdf">[slides]</a>
-    </td>
-  </tr>
-  <tr class="warning">
-    <td>Final Project Due</td>
-    <td>Saturday<br>June 7</td>
-    <td>Project Report due</td>
-    <td></td>
-  </tr>
-  <tr class="danger">
-    <td>Poster Session</td>
-    <td>Tuesday<br> June 12</td>
-    <td><a href="https://engineering.stanford.edu/location">Jen-Hsun Huang Engineering Center</a><br>12:00 pm to 3:15 pm</td>
-    <td></td>
-  </tr-->
+
 </tbody></table>
 </div>
 
