--- a/index.html
+++ b/index.html
@@ -59,20 +59,35 @@
 <div class="container sec">
 <table class="table">
   <tbody><tr class="active">
-    <th>Month</th><th>Schedule</th>
+    <th>Event Type</th><th>Date</th><th>Description</th>
+  </tr>
+
+<tr>
+    <td>Workshop</td>
+    <td>Monday 7pm, 15 Oct 2018</td>
+    <td>SQL 101 Run 3</td>
   </tr>
   <tr>
-    <td>Oct 2018</td>
-    <td><img src="./dac010.jpg" style="height:720px; float: left; margin-left: 20px;"></td>
+    <td>Workshop</td>
+    <td>Wednesday 9.30am, 17 Oct 2018</td>
+    <td>R 101 Run 3</td>
   </tr>
   <tr>
-    <td>Nov 2018</td>
-    <td><img src="./dac011.jpg" style="height:720px; float: left; margin-left: 20px;"></td>
+    <td>Workshop</td>
+    <td>Friday 7pm, 19 Oct 2018</td>
+    <td>Tableau 101 Run 3</td>
   </tr>
   <tr>
-    <td>Dec 2018</td>
-    <td><img src="./dac012.jpg" style="height:720px; float: left; margin-left: 20px;"></td>
+    <td>Workshop</td>
+    <td>Thursday 3.30-10pm, 25 Oct 2018</td>
+    <td>Python Run 2</td>
   </tr>
+  <tr>
+    <td>Workshop</td>
+    <td>Monday 3.30-10pm, 12 Nov 2018</td>
+    <td>R 201</td>
+  </tr>
+
 
 </tbody></table>
 </div>
