--- a/index.html
+++ b/index.html
@@ -62,32 +62,31 @@
     <th>Event Type</th><th>Date</th><th>Description</th>
   </tr>
 
-<tr>
-    <td>Workshop</td>
-    <td>Monday 7pm, 15 Oct 2018</td>
-    <td>SQL 101 Run 3</td>
-  </tr>
   <tr>
     <td>Workshop</td>
-    <td>Wednesday 9.30am, 17 Oct 2018</td>
+	<td>Wednesday 9.30am, 17 Oct 2018</td>
     <td>R 101 Run 3</td>
   </tr>
   <tr>
     <td>Workshop</td>
-    <td>Friday 7pm, 19 Oct 2018</td>
+	<td>Friday 7pm, 19 Oct 2018</td>
     <td>Tableau 101 Run 3</td>
   </tr>
   <tr>
     <td>Workshop</td>
-    <td>Thursday 3.30-10pm, 25 Oct 2018</td>
+	<td>Thursday 3.30-10pm, 25 Oct 2018</td>
     <td>Python Run 2</td>
   </tr>
   <tr>
     <td>Workshop</td>
-    <td>Monday 3.30-10pm, 12 Nov 2018</td>
+	<td>Monday 7-10pm, 12 Nov 2018</td>
     <td>R 201</td>
   </tr>
-
+   <tr>
+    <td>Members Meeting</td>
+	<td>Sunday 3.30-10pm, 20 Jan 2019</td>
+    <td>MM4</td>
+  </tr>
 
 </tbody></table>
 </div>
